--- a/index.html
+++ b/index.html
@@ -18,13 +18,35 @@
 			>
 				<div class="flex items-center gap-3">
 					<div>
-						<div role="tablist" class="tabs tabs-boxed">
+						<div role="tablist" class="tabs tabs-boxed gap-2">
+							<a role="tab" class="tab"
+								><span class="material-symbols-outlined"> pan_tool </span></a
+							>
 							<a role="tab" class="tab tab-active"
 								><span class="material-symbols-outlined"> brush </span></a
 							>
 							<a role="tab" class="tab"
 								><span class="material-symbols-outlined"> ink_eraser </span></a
 							>
+
+							<a role="tab" class="tab"
+								><span class="material-symbols-outlined"> crop_square </span></a
+							>
+
+							<a role="tab" class="tab"
+								><span class="material-symbols-outlined"> circle </span></a
+							>
+
+							<a role="tab" class="tab"
+								><span class="material-symbols-outlined"> texture </span></a
+							>
+
+							<a role="tab" class="tab"
+								><span class="material-symbols-outlined">
+									horizontal_rule
+								</span></a
+							>
+
 							<a role="tab" class="tab"
 								><span class="material-symbols-outlined">
 									highlight_mouse_cursor
