--- a/index.html
+++ b/index.html
@@ -18,36 +18,36 @@
 			>
 				<div class="flex items-center gap-3">
 					<div>
-						<div role="tablist" class="tabs tabs-boxed gap-2">
-							<a role="tab" class="tab"
+						<div data-toolbar role="tablist" class="tabs tabs-boxed gap-2">
+							<a data-tool data-tool-name="hand" role="tab" class="tab"
 								><span class="material-symbols-outlined"> pan_tool </span></a
 							>
-							<a role="tab" class="tab tab-active"
+							<a data-tool data-tool-name="brush" role="tab" class="tab"
 								><span class="material-symbols-outlined"> brush </span></a
 							>
-							<a role="tab" class="tab"
+							<a data-tool data-tool-name="eraser" role="tab" class="tab"
 								><span class="material-symbols-outlined"> ink_eraser </span></a
 							>
 
-							<a role="tab" class="tab"
+							<a data-tool data-tool-name="rect" role="tab" class="tab"
 								><span class="material-symbols-outlined"> crop_square </span></a
 							>
 
-							<a role="tab" class="tab"
+							<a data-tool data-tool-name="circle" role="tab" class="tab"
 								><span class="material-symbols-outlined"> circle </span></a
 							>
 
-							<a role="tab" class="tab"
+							<a data-tool data-tool-name="texture" role="tab" class="tab"
 								><span class="material-symbols-outlined"> texture </span></a
 							>
 
-							<a role="tab" class="tab"
+							<a data-tool data-tool-name="line" role="tab" class="tab"
 								><span class="material-symbols-outlined">
 									horizontal_rule
 								</span></a
 							>
 
-							<a role="tab" class="tab"
+							<a data-tool data-tool-name="highlighter" role="tab" class="tab"
 								><span class="material-symbols-outlined">
 									highlight_mouse_cursor
 								</span></a
@@ -60,6 +60,10 @@
 						</button>
 						<button class="btn btn-circle" data-redo-btn>
 							<span class="material-symbols-outlined"> redo </span>
+						</button>
+
+						<button class="btn btn-circle" data-clear-all-btn>
+							<span class="material-symbols-outlined"> clear_all </span>
 						</button>
 					</div>
 				</div>
