--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 							>
 						</div>
 					</div>
+
+					<!-- Buttons -->
 					<div class="flex items-center gap-2">
 						<button class="btn btn-circle" data-undo-btn>
 							<span class="material-symbols-outlined"> undo </span>
@@ -65,6 +67,17 @@
 						<button class="btn btn-circle" data-clear-all-btn>
 							<span class="material-symbols-outlined"> clear_all </span>
 						</button>
+						<div class="dropdown dropdown-bottom rounded-full">
+							<div tabindex="0" role="button" class="btn m-1">
+								<span class="material-symbols-outlined"> instant_mix </span>
+							</div>
+							<ul
+								class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52"
+							>
+								<li><a>Item 1</a></li>
+								<li><a>Item 2</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
