--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 				<div class="flex items-center gap-3">
 					<div>
 						<div data-toolbar role="tablist" class="tabs tabs-boxed gap-2">
-							<a data-tool data-tool-name="hand" role="tab" class="tab"
-								><span class="material-symbols-outlined"> pan_tool </span></a
+							<a data-tool data-tool-name="selector" role="tab" class="tab"
+								><span class="material-symbols-outlined">
+									arrow_selector_tool
+								</span></a
 							>
 							<a data-tool data-tool-name="brush" role="tab" class="tab"
 								><span class="material-symbols-outlined"> brush </span></a
@@ -49,7 +51,7 @@
 
 							<a data-tool data-tool-name="highlighter" role="tab" class="tab"
 								><span class="material-symbols-outlined">
-									highlight_mouse_cursor
+									stylus_laser_pointer
 								</span></a
 							>
 						</div>
