Brush Improvements, Eraser

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<div class="relative">
 			<!-- <h1>Radhey Shyam</h1> -->
 			<div
+				id="nav-bg"
 				class="absolute top-0 w-full grid place-content-center py-3 px-2 rounded"
 			>
 				<div class="flex items-center gap-3">
