Global Pointer Events disable for all ui elements when drawing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<title>Drawing App</title>
 	</head>
 	<body>
-		<div class="relative">
+		<div id="app-container" class="relative">
 			<!-- <h1>Radhey Shyam</h1> -->
 			<div
 				id="nav-bg"
@@ -107,7 +107,7 @@
 
 			<div
 				class="bg-black min-h-screen overflow-hidden"
-				id="canvasContainer"
+				id="canvas-container"
 			></div>
 		</div>
 	</body>
