--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<!-- Nav -->
 			<div
 				id="nav-bg"
-				class="absolute top-0 w-full grid place-content-center py-3 px-2 rounded"
+				class="absolute top-0 w-full grid place-content-center py-3 px-2 rounded z-[100]"
 			>
 				<div class="flex items-center gap-3">
 					<div>
@@ -101,7 +101,7 @@
 			</div>
 
 			<!-- Zoom Level -->
-			<div class="absolute bottom-4 left-7 flex items-center gap-4">
+			<div class="absolute bottom-4 left-7 flex items-center gap-4 z-[100]">
 				<div class="shadow flex items-center">
 					<div class="lg:tooltip" data-tip="Zoom In">
 						<button id="zoom-in-btn" class="btn btn-ghost btn-xs">
