--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 										type="range"
 										min="1"
 										max="20"
-										value="8"
+										value="4"
 										class="range range-primary"
 									/>
 								</div>
@@ -132,10 +132,25 @@
 				</div>
 			</div>
 
-			<div
-				class="bg-black min-h-screen overflow-hidden"
-				id="canvas-container"
-			></div>
+			<div class="bg-black min-h-screen overflow-hidden" id="canvas-container">
+				<!-- SVG overlay for blur effect -->
+				<svg
+					role="none"
+					width="100%"
+					height="100%"
+					style="
+						position: absolute;
+						inset: 0;
+						pointer-events: none;
+						z-index: 5;
+						display: none;
+					"
+				>
+					<filter id="blurFilter">
+						<feGaussianBlur stdDeviation="0.6" edgeMode="duplicate" />
+					</filter>
+				</svg>
+			</div>
 		</div>
 	</body>
 	<script type="module" src="/src/main.ts"></script>
