Partial Rendering Start

--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
 						</button>
 					</div>
 					<div class="min-w-[4rem] text-center">
-						<div id="zoom-display-value" class="stat-value text-base">100%</div>
+						<div
+							id="zoom-display-value"
+							class="stat-value text-base select-none"
+						>
+							100%
+						</div>
 					</div>
 
 					<div class="lg:tooltip" data-tip="Zoom Out">
