--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 									<div id="strokeColor" class="flex flex-wrap gap-2"></div>
 
-									<h4 class="font-bold">Fill</h4>
+									<h4 class="font-bold">Background</h4>
 
 									<div id="fillColor" class="flex flex-wrap gap-2"></div>
 
